app update overflow fix

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -158,6 +158,9 @@ section {
   height: 400px;
   .container {
     height: 100%;
+    .app-update__content  {
+      height: 100%;
+    }
     img {
       position: absolute;
       top: 0;
